--- a/src/vista/IniciarSesion.form
+++ b/src/vista/IniciarSesion.form
@@ -5,6 +5,9 @@
     <Container class="javax.swing.JDialog" name="jDialog1">
       <Properties>
         <Property name="alwaysOnTop" type="boolean" value="true"/>
+        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[400, 350]"/>
+        </Property>
         <Property name="modal" type="boolean" value="true"/>
       </Properties>
       <AuxValues>
@@ -74,7 +77,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Contrase&#xf1;a"/>
+            <Property name="text" type="java.lang.String" value="Contrasena"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="jButton3">
@@ -90,7 +93,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel4">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Repetir Contrase&#xf1;a"/>
+            <Property name="text" type="java.lang.String" value="Repetir Contrasena"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JPasswordField" name="jPasswordField2">
